# lildb

./: .gitignore  .pre-commit-config.yaml  README.md  db.py  mypy.ini  operations.py  pyproject.toml  ruff.toml  table.py  tox.ini
docs/: manual.md
lildb/: __init__.py  column_types.py  db.py  enumcls.py  operations.py  rows.py  sql.py  table.py
lildb/orm/: __init__.py  model.py  orm.py  typings.py  utils.py
lildb/table/: __init__.py  column.py  table.py
src/: column_types.py  db.py  operations.py  rows.py  table.py
test/: __init__.py  test_operation.py  test_table.py
tests/: __init__.py  test_colum_types.py  test_operation.py  test_orm_model.py  test_table.py
