[tool.poetry]
name = "LilDB"
version = "0.1.0"
description = "LilDB provides a simplified wrapper for SQLite3."
authors = ["Anton Panteleev <mainsample@yandex.ru>"]
readme = "README.md"
license = "MIT"
packages = [{include = "lildb"}]
repository = "https://github.com/StickKing/lildb"

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"