[tool.poetry]
name = "LilDB"
version = "0.5.5"
description = "LilDB provides a simplified wrapper for SQLite3."
authors = ["Anton Panteleev <mainsample@yandex.ru>"]
readme = "README.md"
license = "MIT"
packages = [{include = "lildb"}]
repository = "https://github.com/StickKing/lildb"


[tool.poetry.dependencies]
python = "^3.8"
typing_extensions = "4.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
tox = "4.25.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
ignore = ["ANN401", "I001", "PYI034"]

unfixable = [
    "F401",
    "PLR5501",
]